adding ready card of certificates and complementary courses

--- a/about.html
+++ b/about.html
@@ -25,33 +25,25 @@
                 <div class="presentation__assignment__text-box">
                     <h2>Certificates and complementary courses</h2>
                     <small>Until 2023</small>
-                    <p>Here are all the complementary courses in the area of technology that I have taken and am taking to keep myself continually updated in all fields of technology.</p>
+                    <p>Here are all the complementary courses that I have taken and am taking to keep myself continually updated in all fields of technology and the like. Some of the certified knowledge is described below, but you can see the complete certifications by clicking on <strong>more about</strong>.</p>
                     <div class="presentation__text-box__list">
                         <ul class="presentation__text-box__list-styled">
-                            <li>Alura: Swagger </li>
-                            <li>Formação OO: Python</li>
+                            <li>Swagger</li>
+                            <li>Python Oriented Object</li>
                             <li>Javascript to Back-end</li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>GIT</li>
+                            <li>Data modeling</li>
+                            <li>SQL</li>
+                            <li>Docker</li>
+                            <li>Computer Architecture</li>
+                            <li>Node</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>TDD</li>
                         </ul>
                     </div>
                     <span class="presentation__container__right-arrow"></span>
-                    <button> <a href="https://drive.google.com/drive/folders/1l6F5gSUcw788t51j8_aiePSrB0p0C-2d?usp=sharing" target="__blank">More about</a></button>
+                    <button> <a href="https://www.linkedin.com/in/alxinc/details/certifications/" target="__blank">More about</a></button>
                 </div>
             </div>
             <div class="presentation__assignment__container presentation__assignment__container-left">
