adding card qitech 2023 new copy

--- a/about.html
+++ b/about.html
@@ -51,14 +51,19 @@
                 <div class="presentation__assignment__text-box">
                     <h2>Math and Statistics - Master of Business Administration</h2>
                     <small>2023</small>
-                    <p>MBA degree focused on macroeconomics and applied statistics. Final analysis of economic and fundamental market scenarios. Applied statistics practice with Python, Numpy and Pandas.</p>
+                    <p>MBA degree focused on macroeconomics and applied statistics. Final analysis of economic and fundamental market scenarios.</p>
                     <div class="presentation__text-box__list">
                         <ul class="presentation__text-box__list-different">
-                            <li></li>
+                            <li>Analysis of demonstrations financial</li>
+                            <li>Economic scenarios</li>
+                            <li>Statistics applied to Business</li>
+                            <li>Statistical inference </li>
+                            <li>Financial Math</li>
+                            <li>Applied statistics practice with Python, Numpy and Pandas</li>
                         </ul>
                     </div>
                     <span class="presentation__container__left-arrow"></span>
-                    <button> <a href="https://drive.google.com/drive/folders/1l6F5gSUcw788t51j8_aiePSrB0p0C-2d?usp=sharing" target="__blank">More about</a></button>
+                    <button> <a href="https://www.linkedin.com/in/alxinc/details/education/1635543228833/single-media-viewer/?profileId=ACoAACWaAQIBdmzvP4v33AVBIXuIWzhyYxnqxig" target="__blank">More about</a></button>
                 </div>
             </div>
             <div class="presentation__assignment__container presentation__assignment__container-right">
@@ -72,7 +77,10 @@
                             <li>I help to create REST APIs that automatization the credit assignment process.</li>
                             <li>I had proactive monitoring using SRE tools as Grafana to track the flow messages on APIs.</li>
                             <li>Used Google Cloud and Kubernetes to monitor, log and debug APIs integrated with Opsgenie and Slack.</li>
-                            <li></li>
+                            <li>I integrated within the microservices ecosystem with multiple APIs that talked to each other using the PubSub pattern together with the Google Cloud PubSub solution.</li>
+                            <li>I developed documentation for APIs from scratch using Swagger and Docusaurus.</li>
+                            <li>I used SQLalchemy as an ORM to connect with the MySQL database. I also used Redis to store information over a short period of time.</li>
+                            <li>Participated in meetings with stakeholders to align and create new technology solutions.</li>
                         </ul>
                     </div>
                     <span class="presentation__container__right-arrow"></span>
@@ -91,7 +99,7 @@
                         </ul>
                     </div>
                     <span class="presentation__container__left-arrow"></span>
-                    <button> <a href="https://drive.google.com/drive/folders/1l6F5gSUcw788t51j8_aiePSrB0p0C-2d?usp=sharing" target="__blank">More about</a></button>
+                    <button> <a href="https://www.linkedin.com/in/alxinc/details/education/1635518935990/single-media-viewer/?profileId=ACoAACWaAQIBdmzvP4v33AVBIXuIWzhyYxnqxig" target="__blank">More about</a></button>
                 </div>
             </div>
             <div class="presentation__assignment__container presentation__assignment__container-right">
@@ -114,14 +122,20 @@
                 <div class="presentation__assignment__text-box">
                     <h2>Information Security - Master of Business Administration</h2>
                     <small>2021</small>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem laborum totam obcaecati ratione, adipisci dolore numquam architecto dolorem fuga veritatis quia iste cumque odio maxime vitae omnis. Quaerat, suscipit culpa.</p>
+                    <p>It addresses all the complexity behind the area of ​​Information Security from the physical (people) to the virtual (networks and computers) level. Legal part also through the LGPD.</p>
                     <div class="presentation__text-box__list">
                         <ul>
-                            <li></li>
+                            <li>Brazilian LGPD</li>
+                            <li>Cloud computing</li>
+                            <li>Information security politics</li>
+                            <li>Networks</li>
+                            <li>Juridic aspects of information security</li>
+                            <li>Analysis of vulnerabilities and invasion risks: RED and BLUE teams</li>
+                            <li>S.O Security</li>
                         </ul>
                     </div>
                     <span class="presentation__container__left-arrow"></span>
-                    <button disabled> <a href="https://drive.google.com/drive/folders/1l6F5gSUcw788t51j8_aiePSrB0p0C-2d?usp=sharing" target="__blank">More about</a></button>
+                    <button disabled> <a href="https://www.linkedin.com/in/alxinc/details/education/1635518942107/single-media-viewer/?profileId=ACoAACWaAQIBdmzvP4v33AVBIXuIWzhyYxnqxig" target="__blank">More about</a></button>
                 </div>
             </div>
             <div class="presentation__assignment__container presentation__assignment__container-right">
@@ -136,7 +150,7 @@
                         </ul>
                     </div>
                     <span class="presentation__container__right-arrow"></span>
-                    <button> <a href="https://drive.google.com/drive/folders/1l6F5gSUcw788t51j8_aiePSrB0p0C-2d?usp=sharing" target="__blank">More about</a></button>
+                    <button> <a href="https://www.linkedin.com/in/alxinc/details/education/501597071/multiple-media-viewer/?profileId=ACoAACWaAQIBdmzvP4v33AVBIXuIWzhyYxnqxig&treasuryMediaId=1635478914936" target="__blank">More about</a></button>
                 </div>
             </div>
         </section>      
@@ -159,7 +173,6 @@
         </a>
     </footer>
     <script src="https://kit.fontawesome.com/298f7cdb64.js" crossorigin="anonymous"></script>
-</body>
 </body>
 
 </html>
