adding full stack developer 2022 copy

--- a/about.html
+++ b/about.html
@@ -92,10 +92,15 @@
                 <div class="presentation__assignment__text-box">
                     <h2>Data analysis - Specialist Degree</h2>
                     <small>2022</small>
-                    <p>Specialist degree focused on data analysis and processing using the ETL process to generate information through Hadoop environment tools such as Spark and Kafka. Practice with PySpark and Databricks.</p>
+                    <p>Specialist degree focused on data analysis and processing using the ETL process to generate information through Hadoop environment tools such as Spark. Under is some of topics on this degree:</p>
                     <div class="presentation__text-box__list">
                         <ul>
-                            <li></li>
+                            <li>Practice with PySpark and Databricks.</li>
+                            <li>Business statistics</li>
+                            <li>Cloud computing</li>
+                            <li>Big data</li>
+                            <li>Networks and protocols</li>
+                            <li>Privacy and security</li>
                         </ul>
                     </div>
                     <span class="presentation__container__left-arrow"></span>
@@ -107,10 +112,15 @@
                 <div class="presentation__assignment__text-box">
                     <h2>QI TECH LTDA - Full Stack Developer</h2>
                     <small>2022</small>
-                    <p>Direct involvement in technical integrations and meetings with customers in Banking as a Service products. Constant involvement in the formulation and development of documentation for REST APIs. Bug resolution and feature development on the front-end of the platform using Javascript, React, Jinja, integrated with CI/CD pipelines. Construction and integration of REST APIs linked to public securities purchase and sale events using technologies such as Python, Docker, MySQL, SQLAlchemy, Google Cloud, Falcon and FastAPI.</p>
+                    <p>This year I worked as a Full Stack Developer in a customer success and bugs technology team where we had direct contact with customers and their technology teams daily through meetings and after then migrated to a team entirely focused on development. My duties during this period were: </p>
                     <div class="presentation__text-box__list">
                         <ul>
-                            <li></li>
+                            <li>Enter daily meetings with clients to realign expectations, resolve problems or answer questions.</li>
+                            <li>Develop some functionalities with the front end of the platform.</li>
+                            <li>I created API integration solutions according to the technologies that each client used.</li>
+                            <li>I created it from scratch and helped develop APis REST that purchase, manage and sell public securities using integrations with the National Financial System Network and the National Financial System.</li>
+                            <li>I used TDD along with tools to mock integration and end2end tests.</li>
+                            <li>Developed and deployed credit assignment contracts using technologies created internally.</li>
                         </ul>
                     </div>
                     <span class="presentation__container__right-arrow"></span>
