adding card si degree

--- a/about.html
+++ b/about.html
@@ -153,10 +153,13 @@
                 <div class="presentation__assignment__text-box">
                     <h2>Systems analysis - Degree</h2>
                     <small>2020</small>
-                    <p>Degree in systems analysis and development focused on the practice and theory of computing, modeling and data engineering for systems. Massive practice with Java, web with Spring Boot, databases with MySQL and MongoDB.</p>
+                    <p>Degree in systems analysis and development focused on the practice and theory of computing, modeling and data engineering for systems. Under content explore some of main topics learned:</p>
                     <div class="presentation__text-box__list">
                         <ul>
-                            <li></li>
+                            <li> I use quick, count and insertion sort to order collections and data structures.</li>
+                            <li> I use Spring Boot with Java to practice of web development and concepts web.</li>
+                            <li> I learn software engineering life cycles and requirements. </li>
+                            <li> I use design patterns and SOLID concepts to generate a code more compact and decoupled.</li>
                         </ul>
                     </div>
                     <span class="presentation__container__right-arrow"></span>
