adding new style of project

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <main class="presentation">
         <section class="presentation__assignment">
-            <h1 class="presentation__assignment__title">What i cannot create, <strong> i do not understand.</strong> </h1>
+            <h1 class="presentation__assignment__title">What i cannot create, <strong class="presentation__assingment-strong"> i do not understand.</strong> </h1>
             <p class="presentation__assignment__paragraphs">I believe the power of learning anything lives in practice and consistency over time. This means that learning N things is a matter of one or two years; Being eloquent in one of them takes half a lifetime.</p>
             <div class="presentation__assignment__links">
                 <h2 class="presentation__links__subtitle">Find me</h2>
