--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
                                     </iframe>
                                 </div>
                                 <div class="presentation_content">
-                                    <p>Life is a query platform developed with Python and Django. </p>
+                                    <p>Life is a consultation and exam platform developed with Python and Django. </p>
                                 </div>
                                 <div class="presentation__buttons-link">
                                     <button><img class="presentation__images" src="assets/go-code.png" alt="" srcset=""></button>
