adding rework on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,14 +36,14 @@
                             <!-- put for with nunjucks -->
                             <div class="presentation__card">
                                 <div class="view_project">
-                                    <iframe src="https://www.youtube.com/embed/8ONppXj427Y?autoplay=1&loop=1&mute=1" title="Task API" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                    <img src="assets/task api.png" alt="Little girl constructing something"/>
                                 </div>
                                 <div class="presentation_content">
-                                    <p>Task API is a task management API developed with Java, Spring Boot and Hibernate. </p>
+                                    <p>Task API is a task management API developed with Java, Spring Boot, Hibernate and Docker. </p>
                                 </div>
                                 <div class="presentation__buttons-link">
-                                    <button><a href="https://github.com/upALX/TaskAPI" target="_blank"><img class="presentation__images" src="assets/go-code.png" alt="" srcset=""></a></button>
-                                    <button><a href="http://"> <img class="presentation__images" src="assets/go-project.png" alt="" srcset=""></a></button>
+                                    <button><a href="https://github.com/upALX/TaskAPI" target="_blank"><img class="presentation__images" src="assets/go-code.png" alt="an image with a symbolic code" srcset=""></a></button>
+                                    <button><a href="https://youtu.be/8ONppXj427Y" target="_blank"> <img class="presentation__images" src="assets/go-project.png" alt="an image of an open eye" ></a></button>
                                 </div>
                             </div>
                         </div>
@@ -51,14 +51,14 @@
                             <!-- put for with nunjucks -->
                             <div class="presentation__card">
                                 <div class="view_project">
-                                    <iframe src="https://www.youtube.com/embed/fwN73qjPLRg?autoplay=1&loop=1&mute=1" title="HelpCreatorRunning" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                    <img src="assets/help_creator_screen.png" alt="Little girl constructing something"/>
                                 </div>
                                 <div class="presentation_content">
-                                    <p>Help Creator is an app that creates titles and descriptions based on content. Developed with Typescript, Node, ReactJS, Prisma.</p>
+                                    <p>Help Creator is an app that creates titles and descriptions based on media content. Developed with Typescript, Node, ReactJS, Prisma.</p>
                                 </div>
                                 <div class="presentation__buttons-link">
-                                    <button><a href="https://github.com/upALX/TaskAPI" target="_blank"><img class="presentation__images" src="assets/go-code.png" alt="" srcset=""></a></button>
-                                    <button><img class="presentation__images" src="assets/go-project.png" alt="" srcset=""></button>
+                                    <button><a href="https://github.com/upALX/TaskAPI" target="_blank"><img class="presentation__images" src="assets/go-code.png" alt="an image with a symbolic code" srcset=""></a></button>
+                                    <button><a href="https://youtu.be/fwN73qjPLRg" target="_blank"> <img class="presentation__images" src="assets/go-project.png" alt="an image of an open eye"></a></button>
                                 </div>
                             </div>
                         </div>
@@ -66,16 +66,14 @@
                             <!-- put for with nunjucks -->
                             <div class="presentation__card">
                                 <div class="view_project">
-                                    <iframe width="500" height="315" 
-                                        src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
-                                    </iframe>
+                                    <img src="assets/construction-little-girl.webp" alt="Little girl constructing something"/>
                                 </div>
                                 <div class="presentation_content">
                                     <p>Life is a consultation and exam platform developed with Python and Django. </p>
                                 </div>
                                 <div class="presentation__buttons-link">
-                                    <button><img class="presentation__images" src="assets/go-code.png" alt="" srcset=""></button>
-                                    <button><a href="http://"> <img class="presentation__images" src="assets/go-project.png" alt="" srcset=""></a></button>
+                                    <button><img class="presentation__images" src="assets/go-code.png" alt="an image with a symbolic code"/></button>
+                                    <button><a href="http://"> <img class="presentation__images" src="assets/go-project.png" alt="an image of an open eye"/></a></button>
                                 </div>
                             </div>
                         </div>
