--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
                                     <img src="assets/help_creator_screen.png" alt="Little girl constructing something"/>
                                 </div>
                                 <div class="presentation_content">
-                                    <p>Help Creator is an app that creates titles and descriptions based on media content. Developed with Typescript, Node, ReactJS, Prisma.</p>
+                                    <p>Help Creator is an app that creates titles and descriptions based on media content input.</p>
                                 </div>
                                 <div class="presentation__buttons-link">
                                     <button><a href="https://github.com/upALX/TaskAPI" target="_blank"><img class="presentation__images" src="assets/go-code.png" alt="an image with a symbolic code" srcset=""></a></button>
