--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p class="presentation__assignment__paragraphs">I believe the power of learning anything lives in practice and consistency over time. This means that learning N things is a matter of one or two years; Being eloquent in one of them takes half a lifetime.</p>
             <div class="presentation__assignment__links">
                 <h2 class="presentation__links__subtitle">Find me</h2>
-                <a class="presentation__links__link" href="https://www.linkedin.com/in/upalx/" target="_blank">
+                <a class="presentation__links__link" href="https://www.linkedin.com/in/alxinc/" target="_blank">
                     <i class="fa-brands fa-linkedin"></i> Linkedin
                 </a>
                 
