adding gif of task api use

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
                             <!-- put for with nunjucks -->
                             <div class="presentation__card">
                                 <div class="view_project">
-                                    <img src="assets/task api.png" alt="Little girl constructing something"/>
+                                    <img src="assets/task-api.gif" alt="Little girl constructing something"/>
                                 </div>
                                 <div class="presentation_content">
                                     <p>Task API is a task management API developed with Java, Spring Boot, Hibernate and Docker. </p>
