--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
                                     <img src="assets/task-api.gif" alt="Little girl constructing something"/>
                                 </div>
                                 <div class="presentation_content">
-                                    <p>Task API is a task management API developed with Java, Spring Boot, Hibernate and Docker. </p>
+                                    <p>Task API project is a task management API developed with Java, Spring Boot, Hibernate and Docker. </p>
                                 </div>
                                 <div class="presentation__buttons-link">
                                     <button><a href="https://github.com/upALX/TaskAPI" target="_blank"><img class="presentation__images" src="assets/go-code.png" alt="an image with a symbolic code" srcset=""></a></button>
@@ -54,7 +54,7 @@
                                     <img src="assets/help-creator-resized.gif" alt="Little girl constructing something"/>
                                 </div>
                                 <div class="presentation_content">
-                                    <p>Help Creator is an app that creates titles and descriptions based on media content input.</p>
+                                    <p>Help Creator project is an app that creates titles and descriptions based on media content input.</p>
                                 </div>
                                 <div class="presentation__buttons-link">
                                     <button><a href="https://github.com/upALX/TaskAPI" target="_blank"><img class="presentation__images" src="assets/go-code.png" alt="an image with a symbolic code" srcset=""></a></button>
@@ -69,11 +69,11 @@
                                     <img src="assets/construction-little-girl.webp" alt="Little girl constructing something"/>
                                 </div>
                                 <div class="presentation_content">
-                                    <p>Life is a consultation and exam platform developed with Python and Django. </p>
+                                    <p>Life project is a consultation and exam platform developed with Python and Django. </p>
                                 </div>
                                 <div class="presentation__buttons-link">
-                                    <button><img class="presentation__images" src="assets/go-code.png" alt="an image with a symbolic code"/></button>
-                                    <button><a href="http://"> <img class="presentation__images" src="assets/go-project.png" alt="an image of an open eye"/></a></button>
+                                    <button> <a href="https://github.com/upALX/TaskAPI" target="_blank"> <img class="presentation__images" src="assets/go-code.png" alt="an image with a symbolic code"/></a></button>
+                                    <button><a href="#"> <img class="presentation__images" src="assets/go-project.png" alt="an image of an open eye"/></a></button>
                                 </div>
                             </div>
                         </div>
