fix on source links into portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
                                     <p>Help Creator project is an app that creates titles and descriptions based on media content input.</p>
                                 </div>
                                 <div class="presentation__buttons-link">
-                                    <button><a href="https://github.com/upALX/TaskAPI" target="_blank"><img class="presentation__images" src="assets/go-code.png" alt="an image with a symbolic code" srcset=""></a></button>
+                                    <button><a href="https://github.com/upALX/helpCreator" target="_blank"><img class="presentation__images" src="assets/go-code.png" alt="an image with a symbolic code" srcset=""></a></button>
                                     <button><a href="https://youtu.be/fwN73qjPLRg" target="_blank"> <img class="presentation__images" src="assets/go-project.png" alt="an image of an open eye"></a></button>
                                 </div>
                             </div>
@@ -72,7 +72,7 @@
                                     <p>Life project is a consultation and exam platform developed with Python and Django. </p>
                                 </div>
                                 <div class="presentation__buttons-link">
-                                    <button> <a href="https://github.com/upALX/TaskAPI" target="_blank"> <img class="presentation__images" src="assets/go-code.png" alt="an image with a symbolic code"/></a></button>
+                                    <button> <a href="https://github.com/upALX/Life" target="_blank"> <img class="presentation__images" src="assets/go-code.png" alt="an image with a symbolic code"/></a></button>
                                     <button><a href="#"> <img class="presentation__images" src="assets/go-project.png" alt="an image of an open eye"/></a></button>
                                 </div>
                             </div>
