adding new projects to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
                                     <img src="assets/task-api.gif" alt="Little girl constructing something"/>
                                 </div>
                                 <div class="presentation_content">
-                                    <p>Task API project is a task management API developed with Java, Spring Boot, Hibernate and Docker. </p>
+                                    <p>An task management API developed with Java, Spring Boot, Hibernate and Docker. </p>
                                 </div>
                                 <div class="presentation__buttons-link">
                                     <button><a href="https://github.com/upALX/TaskAPI" target="_blank"><img class="presentation__images" src="assets/go-code.png" alt="an image with a symbolic code" srcset=""></a></button>
@@ -54,7 +54,52 @@
                                     <img src="assets/help-creator-resized.gif" alt="Little girl constructing something"/>
                                 </div>
                                 <div class="presentation_content">
-                                    <p>Help Creator project is an app that creates titles and descriptions based on media content input.</p>
+                                    <p>A app that creates titles and descriptions based on media content input developed with Node, Typescript, React.</p>
+                                </div>
+                                <div class="presentation__buttons-link">
+                                    <button><a href="https://github.com/upALX/helpCreator" target="_blank"><img class="presentation__images" src="assets/go-code.png" alt="an image with a symbolic code" ></a></button>
+                                    <button><a href="https://youtu.be/fwN73qjPLRg" target="_blank"> <img class="presentation__images" src="assets/go-project.png" alt="an image of an open eye"></a></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <!-- put for with nunjucks -->
+                            <div class="presentation__card">
+                                <div class="view_project">
+                                    <img src="assets/pickme.gif" alt="Operation of pick me app."/>
+                                </div>
+                                <div class="presentation_content">
+                                    <p>A polling API developed with Node, Typescript, Fastify, PostgreSQL, Redis, Prisma, Docker.</p>
+                                </div>
+                                <div class="presentation__buttons-link">
+                                    <button><a href="https://github.com/upALX/PickMe" target="_blank"><img class="presentation__images" src="assets/go-code.png" alt="an image with a symbolic code" srcset=""></a></button>
+                                    <button><a href="https://youtu.be/hkVdXHjU7dk" target="_blank"> <img class="presentation__images" src="assets/go-project.png" alt="an image of an open eye"></a></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <!-- put for with nunjucks -->
+                            <div class="presentation__card">
+                                <div class="view_project">
+                                    <img src="assets/mynotes.gif" alt="Operation of my notes app."/>
+                                </div>
+                                <div class="presentation_content">
+                                    <p>A notes app developed with ReactJS, TailwindCSS, Typescript.</p>
+                                </div>
+                                <div class="presentation__buttons-link">
+                                    <button><a href="https://github.com/upALX/MyNotes/tree/main" target="_blank"><img class="presentation__images" src="assets/go-code.png" alt="an image with a symbolic code" ></a></button>
+                                    <button><a href="https://youtu.be/hAAWWZE6CWo" target="_blank"> <img class="presentation__images" src="assets/go-project.png" alt="an image of an open eye"></a></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <!-- put for with nunjucks -->
+                            <div class="presentation__card">
+                                <div class="view_project">
+                                    <img src="assets/weather-app.gif" alt="Little girl constructing something"/>
+                                </div>
+                                <div class="presentation_content">
+                                    <p>A weather data API developed with NodeJS, NestJS, Typescript, PostgreSQL, TypeORM, Docker.</p>
                                 </div>
                                 <div class="presentation__buttons-link">
                                     <button><a href="https://github.com/upALX/helpCreator" target="_blank"><img class="presentation__images" src="assets/go-code.png" alt="an image with a symbolic code" srcset=""></a></button>
@@ -69,7 +114,7 @@
                                     <img src="assets/construction-little-girl.webp" alt="Little girl constructing something"/>
                                 </div>
                                 <div class="presentation_content">
-                                    <p>Life project is a consultation and exam platform developed with Python and Django. </p>
+                                    <p>A web platform consultation and exam platform developed with Python and Django. </p>
                                 </div>
                                 <div class="presentation__buttons-link">
                                     <button> <a href="https://github.com/upALX/Life" target="_blank"> <img class="presentation__images" src="assets/go-code.png" alt="an image with a symbolic code"/></a></button>
