fix - putting the URL of Operation weather API

--- a/portfolio.html
+++ b/portfolio.html
@@ -102,8 +102,8 @@
                                     <p>A weather data API developed with NodeJS, NestJS, Typescript, PostgreSQL, TypeORM, Docker.</p>
                                 </div>
                                 <div class="presentation__buttons-link">
-                                    <button><a href="https://github.com/upALX/helpCreator" target="_blank"><img class="presentation__images" src="assets/go-code.png" alt="an image with a symbolic code" srcset=""></a></button>
-                                    <button><a href="https://youtu.be/fwN73qjPLRg" target="_blank"> <img class="presentation__images" src="assets/go-project.png" alt="an image of an open eye"></a></button>
+                                    <button><a href="https://github.com/upALX/Orpen-Weather" target="_blank"><img class="presentation__images" src="assets/go-code.png" alt="an image with a symbolic code" srcset=""></a></button>
+                                    <button><a href="https://youtu.be/nFREOIxeqig" target="_blank"> <img class="presentation__images" src="assets/go-project.png" alt="an image of an open eye"></a></button>
                                 </div>
                             </div>
                         </div>
